# 2020

./: .gitignore  .gitmodules
Project/Project/src/chaiscript/: intro.cpp
Project/Project/src/cherno/: array_impl.cpp  small_string_opt.cpp
Project/Project/src/cpp_weekly/: address_sanitizer.cpp  adl.cpp  aggregate_init.cpp  algorithms.cpp  any.cpp  array_vs_pointer.cpp  arrays.cpp  assignment_operators.cpp  attributes.cpp  bind.cpp  bit_pattern_matching.cpp  bits.cpp  casts.cpp  clamp.cpp  class_tmpl_arg_type.cpp  comma_operator.cpp  const_mutable_lambda.cpp  constexpr.cpp  constexpr_if.cpp  constructors.cpp  containers.cpp  cost_of_statics.cpp  cpp17.cpp  cpp17_removed_features.cpp  cpp17_sequence_containers.cpp  cpp20_concepts.cpp  cpp_11.cpp  cpp_14.cpp  cpp_98_03.cpp  cpp_oop.cpp  cpu.cpp  default_member_init.cpp  exchange.cpp  fallthrough.cpp  fibonacci.cpp  fold.cpp  for_loop.cpp  functions.cpp  future_intro.cpp  fuzz_testing.cpp  (+53 more)
Project/Project/src/cpp_weekly/conan/: CMakeLists.txt  conanfile.txt  how-to.txt
Project/Project/src/cpp_weekly/hunter/: CMakeLists.txt  fmt_example.cpp  how-to.txt
Project/Project/src/cpp_weekly/modern_cpp/: const_constexpr.cpp  inheritance.cpp  (+2 more)
Project/Project/src/data_structures/: btree.cpp  btree.h  btree_main.cpp
Project/Project/src/general/: bind.cpp  pass_by_value_const_ref.cpp  pointer_reset.cpp  pvs_studio_examples.cpp  reverse_for_loop.cpp  slicing.cpp  smart_ptr_type_erasure.cpp  stringify.cpp
Project/Project/src/pipes/: filter_transform.cpp  several_collections.cpp
Project/UnitTestProject/: UnitTestProject.cpp
(+11 files in other folders)
